<resources>
    <string name="app_name">SmartHelmet</string>
    <string name="service_name">SmartHelmet Service</string>
    <string name="addressbook_label">SmartHelmet</string>
    <string name="notification_title">SmartHelmet</string>
    <string name="wait_dialog_text">Starting up</string>
    <string name="notification_registered">%s connected</string>
    <string name="notification_register_failure">%s failed to connect</string>
    <string name="tunnel_host"></string>
    <string name="about_version">SmartHelmet Android %s</string>
    <string name="about_liblinphone_version">SmartHelmet Core %s</string>
    <string name="about_liblinphone_sdk_version">SmartHelmet SDK %s</string>
    <string name="about_privacy_policy">Visit our privacy policy</string>
    <string name="sync_account_name">SmartHelmet contacts</string>
    <string name="notification_reply_label">Reply</string>
    <string name="notification_replied_label">Sent reply: %s</string>
    <string name="notification_call_hangup_label">Hangup</string>
    <string name="notification_call_answer_label">Answer</string>
    <string name="notification_mark_as_read_label">Mark as read</string>
    <string name="username">Username</string>
    <string name="userid">User-id (optional)</string>
    <string name="phone_number">Phone number</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="international_prefix">International phone number prefix</string>
    <string name="display_name">Display name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Password confirmation</string>
    <string name="domain">Domain</string>
    <string name="remote_provisioning_url">URL</string>
    <string name="email">Email</string>
    <string name="delete_text">Are you sure you want to delete your selection?</string>
    <string name="delete">Delete</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="open">Open</string>
    <string name="continue_text">Continue</string>
    <string name="about">About</string>
    <string name="deny">Deny</string>
    <string name="no_account">No account configured</string>
    <string name="search">Search</string>
    <string name="outgoing">Outgoing</string>
    <string name="incoming">Incoming</string>
    <string name="missed">Missed</string>
    <string name="settings">Settings</string>
    <string name="connect">Connection</string>
    <string name="decline">Decline</string>
    <string name="conference">Conference</string>
    <string name="link">Link</string>
    <string name="link_account_popup">Do you want to link the account %s with your phone number?</string>
    <string name="maybe_later">Maybe later</string>
    <string name="later">Later</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="link_account">Link your account</string>
    <string name="update_available">An update is available</string>
    <string name="do_not_ask_again">Do not show again</string>
    <string name="delete_contacts_text">Are you sure you want to delete these contacts?\nThey will be deleted from your phone as well!</string>
    <string name="logs_url_copied_to_clipboard">Logs url copied into clipboard</string>
    <string name="app_description">安全 <i>智能 </i>快捷 </string>
    <string name="welcome">Welcome</string>
    <string name="assistant">Assistant</string>
    <string name="assistant_create_account">Create account</string>
    <string name="assistant_link_account">Link account</string>
    <string name="assistant_continue">Continue</string>
    <string name="assistant_activate">Activate your account</string>
    <string name="assistant_finish">Finish configuration</string>
    <string name="assistant_validate_account_1">Your account is created. Please check your mails to validate your account:</string>
    <string name="assistant_validate_account_2">Once it is done, come back here and click on the button.</string>
    <string name="assistant_welcome_desc">This assistant will help you configure and use your SIP account.</string>
    <string name="assistant_linphone_login_desc">Please enter your username and password of Linphone account</string>
    <string name="assistant_login_desc">Please enter your username and password with your SIP domain</string>
    <string name="assistant_remote_provisioning_desc">Please provide your provisioning URL</string>
    <string name="transport">Transport</string>
    <string name="assistant_create_account_phone_number_address">Your SIP address is</string>
    <string name="assistant_login_linphone">Use Linphone account</string>
    <string name="assistant_login_generic">Use SIP account</string>
    <string name="assistant_remote_provisioning">Fetch remote configuration</string>
    <string name="assistant_create_account_part_1">Please confirm your country code and enter your phone number</string>
    <string name="assistant_create_account_part_2">We have sent you a SMS with a validation code to your phone number:</string>
    <string name="assistant_create_account_part_3">To complete your phone number verification, please enter the 4 digit code below:\n</string>
    <string name="assistant_create_account_part_email">Please enter an username, email and password for your Linphone account</string>
    <string name="assistant_display_name_optional">Display name (optional)</string>
    <string name="assistant_linphone_account">Use your Linphone account</string>
    <string name="assistant_generic_account">Use SIP account</string>
    <string name="assistant_remote_provisioning_title">Fetch remote configuration</string>
    <string name="assistant_fetch_apply">Fetch and apply</string>
    <string name="assistant_launch_qrcode">QRCode</string>
    <string name="assistant_login">Login</string>
    <string name="assistant_ec_calibration">Echo canceler calibration in progress</string>
    <string name="assistant_remote_provisioning_login">Enter your login</string>
    <string name="assistant_account_not_validated">Your account has not been validated yet.</string>
    <string name="assistant_error_confirmation_code">The confirmation code is invalid.\nPlease try again.</string>
    <string name="assistant_account_validated">Your account has been validated.</string>
    <string name="assistant_error_bad_credentials">Incorrect username or password</string>
    <string name="assistant_codec_down_question">Do you agree to download OpenH264 Video Codec provided by Cisco Systems, Inc.?</string>
    <string name="assistant_codec_downloading">Downloading OpenH264 Video Codec provided by Cisco Systems, Inc.</string>
    <string name="assistant_openh264_downloading">Downloading OpenH264</string>
    <string name="assistant_openh264_restart">Before you can use OpenH264 codec you must restart %s.</string>
    <string name="assistant_openh264_error">Sorry an error has occurred.</string>
    <string name="assistant_codec_downloaded">OpenH264 Video Codec provided by Cisco Systems, Inc. downloaded.</string>
    <string name="wizard_failed">An error occurred, try again later.</string>
    <string name="wizard_server_unavailable">Server unreachable, verify your network connection.</string>
    <string name="wizard_username_unavailable">This username is already taken.</string>
    <string name="assistant_phone_number_unavailable">This phone number is already used.\nPlease type a different number.\nYou can delete your existing account if you want to reuse your phone number.</string>
    <string name="wizard_username_incorrect">Your username is invalid.</string>
    <string name="assistant_phone_number_incorrect">Your phone number is invalid.</string>
    <string name="wizard_email_incorrect">Your email is invalid.</string>
    <string name="wizard_password_incorrect">Your password is invalid</string>
    <string name="wizard_passwords_unmatched">Passwords do not match.</string>
    <string name="pref_manage_title">Manage</string>
    <string name="pref_disable_account">Disable</string>
    <string name="pref_proxy">Proxy</string>
    <string name="pref_domain">Domain*</string>
    <string name="pref_passwd">Password*</string>
    <string name="pref_username">Username*</string>
    <string name="pref_enable_outbound_proxy">Outbound proxy</string>
    <string name="pref_help_outbound_proxy">Route all calls through SIP proxy</string>
    <string name="pref_help_username">Example: john if your account is john@sip.example.org</string>
    <string name="pref_help_domain">sip.example.org if your account is john@sip.example.org</string>
    <string name="pref_help_password">You have to re-enter your password if you edit your username and/or the domain</string>
    <string name="pref_expire_title">Expire</string>
    <string name="pref_avpf">AVPF</string>
    <string name="pref_avpf_rr_interval"> AVPF regular RTCP interval in seconds (between 1 and 5)</string>
    <string name="pref_escape_plus">Replace + by 00</string>
    <string name="pref_link_account">Link your account</string>
    <string name="pref_auth_userid">Auth userid</string>
    <string name="pref_help_auth_userid">Enter authentication userid (optional)</string>
    <string name="pref_display_name">Display name</string>
    <string name="pref_help_display_name">Enter display name (optional)</string>
    <string name="pref_prefix">Prefix</string>
    <string name="pref_prefix_desc">Prefix for your country (without the +)</string>
    <string name="pref_transport">Transport</string>
    <string name="pref_delete_account">Delete this account</string>
    <string name="pref_change_password">Change password</string>
    <string name="pref_default_account">Use as default</string>
    <string name="pref_proxy_push_notif">Allow push notification</string>
    <string name="pref_device_ringtone">Use device ringtone</string>
    <string name="pref_vibrate_on_incoming_calls">Vibrate while incoming call is ringing</string>
    <string name="pref_auto_answer">Auto answer incoming calls</string>
    <string name="pref_auto_answer_time">Auto answer time (in milliseconds)</string>
    <string name="pref_rfc2833_dtmf">Send in-band DTMFs (RFC2833)</string>
    <string name="pref_sipinfo_dtmf">Send out-band DTMFs (SIP INFO)</string>
    <string name="pref_voice_mail">Voice mail URI</string>
    <string name="pref_grant_read_dnd_settings_permission_title">Do Not Disturb settings</string>
    <string name="pref_grant_read_dnd_settings_permission_desc">We need you to grant use the access to the Do Not Disturb settings to correctly ring or not depending on the current policy</string>
    <string name="pref_media_encryption_mandatory_title">Media encryption mandatory</string>
    <string name="pref_image_sharing_server_title">Sharing server</string>
    <string name="pref_auto_download_policy_title">Auto download incoming files policy</string>
    <string name="pref_stun_server">STUN / TURN server</string>
    <string name="pref_ice_enable">Enable ICE</string>
    <string name="pref_media_encryption">Media encryption</string>
    <string name="pref_advanced_title">Advanced</string>
    <string name="pref_incoming_call_timeout_title">Incoming call hangup (in seconds)</string>
    <string name="pref_enable_tts">TTS enable</string>
    <string name="pref_enable_tts_summary">Speech broadcast on state and text messages</string>
    <string name="pref_effect">Effect of voice adjustment</string>
    <string name="pref_tts_effect_lauguage_summary">Broadcast language</string>
    <string name="pref_tts_effect_sex_summary">The voice of gender</string>
    <string name="pref_tts_effect_tone_summary">Tone</string>
    <string name="pref_tts_effect_volume_summary">Volume</string>
    <string name="pref_tts_effect_preview">Effect Preview</string>
</resources>