<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:linphone="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="vertical">

        <com.datang.smarthelmet.settings.widget.SwitchSetting
            android:id="@+id/pref_device_ringtone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            linphone:title="@string/pref_device_ringtone" />

        <com.datang.smarthelmet.settings.widget.SwitchSetting
            android:id="@+id/pref_vibrate_on_incoming_calls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            linphone:title="@string/pref_vibrate_on_incoming_calls" />

        <com.datang.smarthelmet.settings.widget.BasicSetting
            android:id="@+id/pref_grant_read_dnd_settings_permission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            linphone:title="@string/pref_grant_read_dnd_settings_permission_title"
            linphone:subtitle="@string/pref_grant_read_dnd_settings_permission_desc"/>

        <com.datang.smarthelmet.settings.widget.ListSetting
            android:id="@+id/pref_media_encryption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            linphone:title="@string/pref_media_encryption" />

        <com.datang.smarthelmet.settings.widget.SwitchSetting
            android:id="@+id/pref_media_encryption_mandatory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            linphone:title="@string/pref_media_encryption_mandatory_title" />

        <com.datang.smarthelmet.settings.widget.SwitchSetting
            android:id="@+id/pref_sipinfo_dtmf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            linphone:title="@string/pref_sipinfo_dtmf" />

        <com.datang.smarthelmet.settings.widget.SwitchSetting
            android:id="@+id/pref_rfc2833_dtmf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            linphone:title="@string/pref_rfc2833_dtmf" />

        <com.datang.smarthelmet.settings.widget.SwitchSetting
            android:id="@+id/pref_auto_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            linphone:title="@string/pref_auto_answer" />

        <com.datang.smarthelmet.settings.widget.TextSetting
            android:id="@+id/pref_auto_answer_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            linphone:hint="@string/pref_auto_answer_time"
            linphone:title="@string/pref_auto_answer_time" />

        <com.datang.smarthelmet.settings.widget.TextSetting
            android:id="@+id/pref_incoming_call_timeout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            linphone:hint="@string/pref_incoming_call_timeout_title"
            linphone:title="@string/pref_incoming_call_timeout_title" />

        <com.datang.smarthelmet.settings.widget.TextSetting
            android:id="@+id/pref_voice_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            linphone:hint="@string/pref_voice_mail"
            linphone:title="@string/pref_voice_mail" />

    </LinearLayout>

</ScrollView>