<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:linphone="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="vertical">
        <com.datang.smarthelmet.settings.widget.SwitchSetting
            android:id="@+id/pref_enable_tts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            linphone:subtitle="@string/pref_enable_tts_summary"
            linphone:title="@string/pref_enable_tts" />
        <TextView
            style="@style/settings_category_font"
            android:id="@+id/pref_tts_header"
            android:text="@string/pref_effect"
            android:paddingTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.datang.smarthelmet.settings.widget.ListSetting
            android:id="@+id/pref_tts_effect_laugeage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            linphone:subtitle="@string/pref_tts_effect_lauguage_summary"
            linphone:title="@string/pref_auto_download_policy_title"
            linphone:list_items_names="@array/pref_auto_download_policy_entries_labels"
            linphone:list_items_values="@array/pref_auto_download_policy_entries_values"/>

        <com.datang.smarthelmet.settings.widget.ListSetting
            android:id="@+id/pref_tts_effect_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            linphone:subtitle="@string/pref_tts_effect_sex_summary"
            linphone:title="@string/pref_auto_download_policy_title"
            linphone:list_items_names="@array/pref_auto_download_policy_entries_labels"
            linphone:list_items_values="@array/pref_auto_download_policy_entries_values"/>

        <com.datang.smarthelmet.settings.widget.SeekBarSetting
            android:id="@+id/pref_tts_effect_tone"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            linphone:subtitle="@string/pref_tts_effect_tone_summary"
            linphone:title="@string/pref_image_sharing_server_title" />

        <com.datang.smarthelmet.settings.widget.SeekBarSetting
            android:id="@+id/pref_tts_effect_volume"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            linphone:subtitle="@string/pref_tts_effect_volume_summary"
            linphone:title="@string/pref_image_sharing_server_title" />

        <com.datang.smarthelmet.settings.widget.BasicSetting
            android:id="@+id/pref_tts_effect_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            linphone:title="@string/pref_tts_effect_preview"/>

    </LinearLayout>

</ScrollView>